--- a/Code/home.html
+++ b/Code/home.html
@@ -44,38 +44,74 @@
 						<a href="#"><span>OPPM</span></a>
 					</div>
 				</div>
-				<article class="">
-					<img src="image/img_actualite.png" alt="">
-					<div>
-						<h1>Saison 2014-2015</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, saepe sint quibusdam dolore</p>
-						<span>Lire la suite</span>
-					</div>
-				</article>
-				<article class="" >
-					<img src="image/img_actualite.png" alt="">
-					<div>
-						<h1>L'Orchestre des rêves</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, blanditiis quasi tenetur</p>
-						<span>Lire la suite</span>
-					</div>
-				</article>
-				<article class="">
-					<img src="image/img_actualite.png" alt="">
-					<div>
-						<h1>Bonne année 2014</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit at nam neque dolorum </p>
-						<span>Lire la suite</span>
-					</div>
-				</article>
-				<article class="">
-					<img src="image/img_actualite.png" alt="">
-					<div>
-						<h1>Le requiem</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima, distinctio, sunt,</p>
-						<span>Lire la suite</span>
-					</div>
-				</article>
+				<div id="article_content">
+					<article class="">
+						<img src="image/img_actualite.png" alt="">
+						<div>
+							<h1>Saison 2014-2015</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, saepe sint quibusdam dolore</p>
+							<span>Lire la suite</span>
+						</div>
+					</article>
+					<article class="" >
+						<img src="image/img_actualite.png" alt="">
+						<div>
+							<h1>L'Orchestre des rêves</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, blanditiis quasi tenetur</p>
+							<span>Lire la suite</span>
+						</div>
+					</article>
+					<article class="">
+						<img src="image/img_actualite.png" alt="">
+						<div>
+							<h1>Bonne année 2014</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit at nam neque dolorum </p>
+							<span>Lire la suite</span>
+						</div>
+					</article>
+					<article class="">
+						<img src="image/img_actualite.png" alt="">
+						<div>
+							<h1>Le requiem</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima, distinctio, sunt,</p>
+							<span>Lire la suite</span>
+						</div>
+					</article>
+				</div>
+				<span id="bottom_span">Voir l'actualité</span>
+			</section>
+			<section id="section_image"><img src="image/bandeau_bleu.png" alt=""></section>
+			<section id="section_musicien">
+				<div id="top_musicien">
+					<h1>Musiciens</h1>
+				</div>
+				<div id="content_article_music">
+					<article class="article_musicien">
+							<img src="image/Trompette.jpg" alt="">
+							<div>
+								<p>Frédéric Melinagri<br><span>Violoniste</span></p>
+							</div>
+					</article>
+					<article class="article_musicien">
+							<img src="image/Trompette.jpg" alt="">
+							<div>
+								<p>Frédéric Melinagri<br><span>Violoniste</span></p>
+							</div>
+					</article>
+					<article class="article_musicien">
+							<img src="image/Trompette.jpg" alt="">
+							<div>
+								<p>Frédéric Melinagri<br><span>Violoniste</span></p>
+							</div>
+					</article>
+					<article id="article_musicien_last">
+							<img src="image/Trompette.jpg" alt="">
+							<div>
+								<p>Frédéric Melinagri<br><span>Violoniste</span></p>
+							</div>
+					</article>
+				</div>	
+				<span id="bottom_span">Voir tous les musiciens</span>
 			</section>
 		</div>
 	</body>
